004-12-10  Pierre Chifflier  <pollux@cpe.fr>

	* feature: send_message functions rewritten to use safe strings

004-12-08  Pierre Chifflier  <pollux@cpe.fr>

	* bugfix: crash during site purge (closes: #0022)

2004-12-06  Pierre Chifflier  <pollux@cpe.fr>

	* feature: user cache and group cache changed for double-indexed hash
	tables (name and uid)

2004-12-02  Pierre Chifflier  <pollux@cpe.fr>

	* feature: context_list changed to be a real dynamic list, as well as
	ident_list. This removes the hard limitation on connected users.
	* feature: user cache and group cache changed for dynamic lists too

2004-11-29  Pierre Chifflier  <pollux@cpe.fr>

	* feature: MySQL backend now almost working !
	* feature: max_ul and max_dl vars can be changed during runtime, with
	immediate effects
	* feature: changing speed limits for users is also applied on logged users

2004-11-25  Pierre Chifflier  <pollux@cpe.fr>

	* bugfix: problems with locale in LIST (closes: #0020)
	* bugfix:  Can't chdir inside symbolic links  (closes: #0021)
	* optimization:  replaced string comparisons with integers comparisons

2004-11-08  Pierre Chifflier  <pollux@cpe.fr>

	* feature: new library libwzd to help creating standalone applications
	* feature: converted siteconfig, siteuptime and sitewho to use libwzd
	* feature: removed shared memory, it was now useless
	* feature: new convenience library libwzd-base (statically linked) to
	avoid recoding same functions in different progs

2004-10-30  Pierre Chifflier  <pollux@cpe.fr>

	* feature: new commands SITE VARS, VARS_USER, VARS_GROUP
	* bugfix: use same names in vars_user get and set

2004-10-19  Pierre Chifflier  <pollux@cpe.fr>

	* bugfix: potential DoS (ident connections not closed correctly)

2004-10-01  Pierre Chifflier  <pollux@cpe.fr>

	* bugfix: site chacl broken
	* bugfix: segfault on idle timeout
	* bugfix: remove duplicate flags when changing user flags (closes: #0004)