@@ -40,8 +40,6 @@
 
 #define	HARD_THREADLIMIT	2000
 
-#define	HARD_DEF_USER_MAX	64
-#define	HARD_DEF_GROUP_MAX	64
 #define	HARD_MSG_LIMIT		1024
 #define	HARD_MSG_LENGTH_MAX	16384
 
